--- a/templates/trades/base.html
+++ b/templates/trades/base.html
@@ -7,13 +7,19 @@
         <title> {% block title_block %}  {% endblock %} </title>
     </head>
     <body>
-
-        <ul>
-            <li> <a href='/trades/'>Home</a> </li>
-            <li> <a href='/trades/about/'>About</a> </li>
-            <li> <a href='/trades/contact_us/'>Contact us</a> </li>
-            <li> <a href='/trades/our_clients/'>Our clients </a> </li>
-        </ul>
+        <header>
+            <div class = "container">
+                <img src="{% static 'images/cala-homes.jpg' %}" alt="logo" class="logo">
+                <nav>
+                    <ul>
+                        <li> <a href='/trades/'>Home</a> </li>
+                        <li> <a href='/trades/about/'>About</a> </li>
+                        <li> <a href='/trades/contact_us/'>Contact us</a> </li>
+                        <li> <a href='/trades/our_clients/'>Our clients </a> </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
 
         <br/>
