contact us and home page done

--- a/templates/trades/home.html
+++ b/templates/trades/home.html
@@ -11,28 +11,25 @@
 <div class="slideShow">
 
   <div class="mySlides fade">
-      <img  src="{% static 'images/cala.jpg' %}" style='width: 100%;' height="300px" alt="cala homes"/>
+      <img  src="{% static 'images/cala.jpg' %}" alt="cala homes"/>
       <div class="caption">Cala homes</div>
   </div>
 
   <div class="mySlides fade">
-      <img  src="{% static 'images/persimmons.jpg' %}" style='width: 100%;' height="300px" alt="persimmons homes"/>
+      <img  src="{% static 'images/persimmons.jpg' %}" alt="persimmons homes"/>
       <div class="caption">Persimmons homes</div>
   </div>
 
   <div class="mySlides fade">
-      <img  src="{% static 'images/avant.jpg' %}" style='width: 100%;' height="300px" alt="avant homes"/>
+      <img  src="{% static 'images/avant.jpg' %}" alt="avant homes"/>
       <div class="caption">Avant homes</div>
   </div>
 
   <div class="mySlides fade">
-      <img  src="{% static 'images/taylor-wimpey.jpg' %}" style='width: 100%;' height="300px" alt="taylor wimpey homes"/>
+      <img  src="{% static 'images/taylor-wimpey.jpg' %}" alt="taylor wimpey homes"/>
       <div class="caption">Taylor Wimpey homes</div>
   </div>
 
-    <!-- <a class="prev" onclick='plusSlides(-1)'>&#10094;</a>
-    <a class="next" onclick='plusSlides(1)'>&#10095;</a>
-    -->
 </div>
 <br/>
 
@@ -49,16 +46,16 @@
 
 <h1> Welcome </h1>
 <br/>
-<p> MDM Specialist Trades was initially established in 1981.
 
-house building services glasgow
-Having then traded as Sweeney Drywall the company was re-branded in 2006 following an MBO and now trades as MDM Specialist Trades Ltd.
+<div class="box">
+    MDM Specialist Trades was initially established in 1981. </br>
+    Having then traded as Sweeney Drywall the company was re-branded in 2006 following an MBO and now trades as MDM Specialist Trades Ltd. </br>
+    The Directors of the company pride themselves in producing quality, reliability and service to the construction and new build housing industries.</br>
+    The company's business activities encompass all markets from new build housing and social housing projects to commercial projects.
+</div>
 
 
-The Directors of the company pride themselves in producing quality, reliability and service to the construction and new build housing industries.
 
-
-The company's business activities encompass all markets from new build housing and social housing projects to commercial projects. </p>
 
 {% endblock %}
 
