--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -90,9 +90,13 @@ body {
 
 .mySlides {
     display: none;
-    height: 300px;
+    height: 350px;
     border: solid 1px black;
-     
+}
+
+.mySlides img {
+    width: 100%;
+    height: 350px;
 }
 
 .caption {
@@ -133,6 +137,37 @@ body {
 h1 {
     color: white;
     text-align: center;
+}
+
+.box {
+    width: 70%;
+    margin: 0 auto;
+    border-top: solid 1px black;
+    font-size: 20px;
+}
+
+.mapouter {
+    float: right;
+    right: 300px;
+    position:relative;
+    text-align:right;
+    height:500px;
+    width:400px;
+}
+
+.gmap_canvas {
+    overflow:hidden;
+    background:none!important;
+    height:500px;
+    width:400px;
+}
+
+.info {
+    position: relative;
+    float: left;
+    font-size: 20px;
+    left: 200px;
+    width: 400px;
 }
 
 
