--- a/templates/trades/contact_us.html
+++ b/templates/trades/contact_us.html
@@ -3,4 +3,22 @@
 
 {% block title_block %} Contact us {% endblock %}
 
-{% block body_block %} This is the contact us page {% endblock %}
+{% block body_block %}
+<div class = "info">
+    If you have any queries on the work that we do, or anything on this website, please contact us in any of the following ways. </br> </br>
+    Email: info@mdmtradesspecialists.co.uk </br> </br>
+    Phone: +44 (0)141 891 4981 </br> </br>
+    Address: </br> </br>
+    MDM Specialist Trades Limited </br> </br>
+    36 Watt Road </br> </br>
+    Hillington </br> </br>
+    Glasgow </br> </br>
+    G52 4RY
+</div>
+<div class="mapouter">
+    <div class="gmap_canvas">
+        <iframe width="400" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=mdm%20specialist%20trades&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <a href="https://www.pureblack.de/beste-wordpress-themes/">pureblack</a>
+    </div>
+</div>
+{% endblock %}
