--- a/templates/trades/about.html
+++ b/templates/trades/about.html
@@ -3,4 +3,31 @@
 
 {% block title_block %} About us {% endblock %}
 
-{% block body_block %} This is the about us page {% endblock %}
+{% block body_block %}
+
+<div class="info">
+    MDM Cover several trades including: </br>
+
+     - commercial projects glasgow </br>
+     - Metal stud partition systems and metal lined wall systems </br>
+     - Proprietary metal framed ceiling systems </br>
+     - Timber stud partitioning </br>
+     - Plasterboard sheeting </br>
+     - Dot / Dab drylining </br>
+     - Ames Taping </br>
+     - Plastering </br>
+     - Artexing </br>
+     - Coving and cornice work </br>
+     - Painting and decorating </br> </br>
+
+    Our quality control commitment to the industry is driven by our team of competent supervisors who ensure that all works undertaken are produced to a high quality finish. </br> </br>
+
+    They are backed up by a professional office team who are committed to client satisfaction. The directors have a hands-on approach and are always personally available to deal with any questions you may have. </br>
+</div>
+
+<div class = "picture">
+    <img  src="{% static 'images/MDM-office.png' %}" alt="MDM offices, Hillington"/>
+</div>
+
+
+{% endblock %}
