--- a/templates/trades/base.html
+++ b/templates/trades/base.html
@@ -11,12 +11,12 @@
     <body>
         <header>
             <div class = "container">
-                <img src="{% static 'images/logo.png' %}" alt="logo" class="logo">
+                <img src="{% static 'images/MDM-logo.png' %}" alt="logo" class="logo">
                 <nav>
                     <ul>
                         <li> <a href='/trades/'>Home</a> </li>
                         <li> <a href='/trades/about/'>About</a> </li>
-                        <li> <a href='/trades/our_clients/'>Our clients </a> </li>
+                        <li> <a href="/trades/category/clients">Our clients</a> </li>
                         <li> <a href='/trades/contact_us/'>Contact us</a> </li>
                     </ul>
                 </nav>
