--- a/templates/trades/home.html
+++ b/templates/trades/home.html
@@ -48,10 +48,11 @@
 <br/>
 
 <div class="box">
-    MDM Specialist Trades was initially established in 1981. </br>
-    Having then traded as Sweeney Drywall the company was re-branded in 2006 following an MBO and now trades as MDM Specialist Trades Ltd. </br>
-    The Directors of the company pride themselves in producing quality, reliability and service to the construction and new build housing industries.</br>
-    The company's business activities encompass all markets from new build housing and social housing projects to commercial projects.
+    MDM Specialist Trades has over 30 years of experience in the construction industry, having been initially established in 1981. </br>
+    Originally trading as Sweeney Drywall, we re-branded in 2006 following an MBO and now trade as MDM Specialist Trades Ltd. </br>
+    More recently, in 2017, the company changed hands once again and is now run by 2 directors: Stephen Watters and Scott Thompson </br>
+    Our directors pride themselves in producing quality, reliability and service to the construction and new build housing industries.</br>
+    Our business activities encompass all markets from new build housing and social housing projects to commercial projects.
 </div>
 
 
