--- a/templates/trades/base.html
+++ b/templates/trades/base.html
@@ -5,6 +5,7 @@
         {% block script_block %} {% endblock %}
 
         <link rel="stylesheet" type="text/css" href="{% static 'trades/style.css' %}">
+        <link rel="icon" href="data:,">
         <meta charset="UTF-8" />
         <title> {% block title_block %}  {% endblock %} </title>
     </head>
@@ -25,8 +26,17 @@
 
         <br/>
         <br/>
+        <br/>
 
 
         {% block body_block %}  {% endblock %}
+
+
     </body>
+    <footer>
+        MDM specialist trades ltd </br>
+        36 Watt Road </br>
+        Hillington </br>
+        Glasgow
+    </footer>
 </html>
