--- a/templates/trades/contact_us.html
+++ b/templates/trades/contact_us.html
@@ -6,7 +6,7 @@
 {% block body_block %}
 <div class = "info">
     If you have any queries on the work that we do, or anything on this website, please contact us in any of the following ways. </br> </br>
-    Email: info@mdmtradesspecialists.co.uk </br> </br>
+    Email: info@mdmspecialisttrades.co.uk </br> </br>
     Phone: +44 (0)141 891 4981 </br> </br>
     Address: </br> </br>
     MDM Specialist Trades Limited </br> </br>
