--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -22,14 +22,12 @@ nav {
     text-align: center;
 }
     
-
-    
 .logo {
     position: relative;
     float: left;
     left: 70px;
     height: 100px;
-    width: 300px;
+    width: 250px;
 }
 
 
@@ -79,7 +77,7 @@ nav a:hover::after {
 body {
     font-family: "Times New Roman", Times, serif;
     margin: 0;
-    background-color: #cece91;
+    background-image: radial-gradient(circle, white, #cece91, #e1c699);
 }
 
 .slideShow {
@@ -134,29 +132,40 @@ body {
     background-color: #717171;
 }
 
+footer {
+    position: absolute;
+    margin-top: 20px;
+    width: 100%;
+    background-color: white;
+    text-align: center;
+    bottom: 0;
+}
+
 h1 {
-    color: white;
+    color: black;
     text-align: center;
 }
 
 .box {
-    width: 70%;
+    width: 75%;
     margin: 0 auto;
+    text-align: center;
     border-top: solid 1px black;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .mapouter {
+    position: absolute;
     float: right;
-    right: 300px;
-    position:relative;
+    right: 210px;
     text-align:right;
     height:500px;
     width:400px;
 }
 
 .gmap_canvas {
-    overflow:hidden;
+    overflow: hidden;
     background:none!important;
     height:500px;
     width:400px;
@@ -166,17 +175,46 @@ h1 {
     position: relative;
     float: left;
     font-size: 20px;
-    left: 200px;
+    left: 210px;
     width: 400px;
 }
 
-.picture {
+.picture img {
     position: absolute;
     float: right;
     right: 200px;
-    width: 400px;
-    height: 1000px;
-    overflow:hidden;
+    width: 450px;
+    height: 450px;
+}
+
+.cards {
+    position: absolute;
+    left: 175px;
+    display: inline-block;
+}
+
+.card {
+    background-color: white;
+    margin-right: 140px;
+    margin-top: 50px;
+    display: inline-block;
+    box-shadow: 0 4px 8px 0;
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0;
+}
+
+.card_info {
+    position: relative;
+    background-color: white;
+    text-align: center;
+}
+
+.card img {
+    height: 150px;
+    width: 150px;
 }
 
 
