--- a/templates/trades/base.html
+++ b/templates/trades/base.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class = "container">
-                <img src="{% static 'images/MDM-logo.png' %}" alt="logo" class="logo">
+                <img src="{% static 'images/MDMlogo.jpg' %}" alt="logo" class="logo">
                 <nav>
                     <ul>
                         <li> <a href='/trades/'>Home</a> </li>
