--- a/templates/trades/base.html
+++ b/templates/trades/base.html
@@ -8,6 +8,7 @@
         <link rel="icon" href="data:,">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+        <meta name="viewport" content="height=device-height,initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="HandheldFriendly" content="true">
         <title> {% block title_block %}  {% endblock %} </title>
