--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -26,8 +26,8 @@ nav {
     position: relative;
     float: left;
     left: 70px;
-    height: 30%;
-    width: 250px;
+    height: device-height;
+    max-width: 25%;
 }
 
 
@@ -226,11 +226,15 @@ h1 {
 @media screen and (max-width: 768px) {
     #primary { width:100%; }
     #secondary { width:100%; margin:0; border:none; }
+}
+
+@-ms-viewport{
+  width: device-width;
+}
 
 
 img { max-width: 100%; }
 
-}
 
 
 
