--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -26,7 +26,7 @@ nav {
 .logo {
     position: relative;
     float: left;
-    left: 70px;
+    left: 5vw;
     height: 10vh;
     max-width: 25%;
 }
