--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -1,12 +1,18 @@
+
+
+/* Portrait */
+@media screen and (orientation:portrait) {
+   /* Portrait styles here */
+}
+/* Landscape */
+@media screen and (orientation:landscape) {
 .container {
     width: 80%;
-    height: 40%;
     margin: 0 auto;
 }
 
 
 header {
-    width: 100%;
     background-color: white;
 }
 
@@ -19,7 +25,7 @@ header::after {
 
 nav {
     position: absolute;
-    height: 40px;
+    height: 2vw;
     width: 100%;
     text-align: center;
 }
@@ -28,8 +34,8 @@ nav {
     position: relative;
     float: left;
     left: 5vw;
-    height: 10vh;
-    max-width: 25%;
+    height: 8vh;
+    width: 20vw;
 }
 
 
@@ -42,7 +48,7 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-left: 5vw;
+    margin-left: 5.25vw;
     padding-top: 4vh;
     position: relative;
     font-size: 1.5vw;
@@ -90,20 +96,20 @@ body {
 
 .mySlides {
     display: none;
-    height: 350px;
+    height: 42vh;
     border: solid 1px black;
 }
 
 .mySlides img {
     width: 100%;
-    height: 350px;
+    height: 42vh;
 }
 
 .caption {
     color: #f2f2f2;
-    font-size: 15px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    font-size: 1vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -136,11 +142,9 @@ body {
 
 footer {
     position: absolute;
-    margin-top: 20px;
     width: 100%;
     background-color: white;
     text-align: center;
-    bottom: 0;
 }
 
 h1 {
@@ -154,16 +158,15 @@ h1 {
     text-align: center;
     border-top: solid 1px black;
     font-size: 20px;
-    margin-bottom: 20px;
 }
 
 .mapouter {
     position: absolute;
     float: right;
-    right: 210px;
-    text-align:right;
-    height:500px;
-    width:400px;
+    right: 14vw;
+    text-align: right;
+    height: 10vh;
+    width: 14vw;
 }
 
 .gmap_canvas {
@@ -219,23 +222,8 @@ h1 {
     width: 150px;
 }
 
-/* Tablet Landscape */
-@media screen and (max-width: 1060px) {
-    #primary { width:67%; }
-    #secondary { width:30%; margin-left:3%;}
-}
-/* Tabled Portrait */
-@media screen and (max-width: 768px) {
-    #primary { width:100%; }
-    #secondary { width:100%; margin:0; border:none; }
 }
 
-@-ms-viewport{
-  width: device-width;
-}
-
-
-img { max-width: 100%; }
 
 
 
