--- a/templates/trades/contact_us.html
+++ b/templates/trades/contact_us.html
@@ -4,6 +4,8 @@
 {% block title_block %} Contact us {% endblock %}
 
 {% block body_block %}
+<h1> Contact information </h1>
+</br>
 <div class = "info">
     If you have any queries on the work that we do, or anything on this website, please contact us in any of the following ways. </br> </br>
     Email: info@mdmspecialisttrades.co.uk </br> </br>
