--- a/templates/trades/home.html
+++ b/templates/trades/home.html
@@ -36,7 +36,6 @@
   </div>
 
 </div>
-</br>
 
 
 <div style='text-align: center;'>
@@ -50,10 +49,10 @@
 <h1> Welcome </h1>
 
 <div class="box">
-    MDM Specialist Trades has over 30 years of experience in the construction industry, having been initially established in 1981. </br>
-    Originally trading as Sweeney Drywall, we re-branded in 2006 following an MBO and now trade as MDM Specialist Trades Ltd. </br>
-    More recently, in 2017, the company changed hands once again and is now run by 2 directors: Stephen Watters and Scott Thompson </br>
-    Our directors pride themselves in producing quality, reliability and service to the construction and new build housing industries.</br>
+    MDM Specialist Trades has over 30 years of experience in the construction industry, having been initially established in 1981. </br> </br>
+    Originally trading as Sweeney Drywall, we re-branded in 2006 following an MBO and now trade as MDM Specialist Trades Ltd. </br> </br>
+    More recently, in 2017, the company changed hands once again and is now run by 2 directors: Stephen Watters and Scott Thompson </br> </br>
+    Our directors pride themselves in producing quality, reliability and service to the construction and new build housing industries.</br> </br>
     Our business activities encompass all markets from new build housing and social housing projects to commercial projects.
 </div>
 
