--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -30,6 +30,7 @@ nav {
 .logo {
     position: relative;
     float: left;
+    margin-left: 5vw;
     height: 7vw;
     width: 10vh;
 }
@@ -38,13 +39,14 @@ nav {
 nav ul {
     list-style-type: none;
     margin: 0;
+    margin-left: 9vw;
     padding: 0;
 }
 
 
 nav li {
     display: inline-block;
-    margin-left: 5vh;
+    margin-left: 5vw;
     padding-top: 3vw;
     position: relative;
     font-size: 1vh;
@@ -96,20 +98,20 @@ html, body {
 
 .mySlides {
     display: none;
-    height: 30vh;
+    height: 20vh;
     border: solid 1px black;
 }
 
 .mySlides img {
     width: 100%;
-    height: 42vh;
+    height: 20vh;
 }
 
 .caption {
     color: #f2f2f2;
-    font-size: 1vw;
-    padding-top: 1vw;
-    padding-bottom: 1vw;
+    font-size: 1vh;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -126,9 +128,9 @@ html, body {
 
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
+    height: 1.5vh;
+    width: 1.5vh;
+    margin-top: 1vh;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
@@ -140,17 +142,17 @@ html, body {
 }
 
 h1 {
-    font-size: 3vw;
+    font-size: 3vh;
     color: black;
     text-align: center;
 }
 
 .box {
-    width: 75%;
+    width: 80%;
     margin: 0 auto;
     text-align: center;
     border-top: solid 1px black;
-    font-size: 1.4vw;
+    font-size: 2vh;
 }
 
 .mapouter {
@@ -172,9 +174,9 @@ h1 {
 .info {
     position: absolute;
     float: left;
-    font-size: 1.4vw;
-    left: 15vw;
-    width: 30vw;
+    font-size: 2vh;
+    left: 10vw;
+    width: 90%;
 }
 
 .picture img {
@@ -362,9 +364,9 @@ html, body {
 
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
+    height: 1.5vw;
+    width: 1.5vw;
+    margin-top: 1vw;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
