--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -176,27 +176,26 @@ h1 {
     float: left;
     font-size: 2vh;
     left: 10vw;
-    width: 90%;
+    width: 80%;
 }
 
 .picture img {
     position: absolute;
-    float: right;
-    right: 15vw;
-    width: 30vw;
-    height: 65vh;
+    height: 0;
+    width: 0;
+    visibility: hidden;
 }
 
 .cards {
     position: absolute;
-    left: 12vw;
+    left: 8vw;
     display: inline-block;
 }
 
 .card {
     background-color: white;
-    margin-right: 10vw;
-    margin-bottom: 20vh;
+    margin-right: 14vw;
+    margin-bottom: 10vh;
     display: inline-block;
     box-shadow: 0 4px 8px 0;
     transition: 0.3s;
@@ -210,12 +209,12 @@ h1 {
     position: relative;
     background-color: white;
     text-align: center;
-    font-size: 1vw;
+    font-size: 1.5vh;
 }
 
 .card img {
-    height: 20vh;
-    width: 10vw;
+    height: 15vh;
+    width: 25vw;
 }
 
 .wrapper {
@@ -231,9 +230,9 @@ h1 {
     position: absolute;
     background-color: white;
     text-align: center;
-    font-size: 1vw;
+    font-size: 1vh;
     width: 100%;
-    height: 10vw;
+    height: 10vh;
 }
 }
 /* Landscape */
@@ -420,7 +419,7 @@ h1 {
     float: right;
     right: 15vw;
     width: 30vw;
-    height: 65vh;
+    height: 70vh;
 }
 
 .cards {
