--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -156,34 +156,39 @@ h1 {
 }
 
 .mapouter {
-    position: absolute;
-    float: right;
-    right: 15vw;
+    position: relative;
+    margin: auto;
+    margin-bottom: 5vh;
+    display: block;
     text-align: right;
-    height: 70vh;
-    width: 30vw;
+    height: 40vh;
+    width: 55vw;
 }
 
 .gmap_canvas {
     overflow: hidden;
     background: none!important;
-    height: 70vh;
-    width: 30vw;
-}
-
-.info {
-    position: absolute;
-    float: left;
-    font-size: 2vh;
-    left: 10vw;
-    width: 80%;
+    height: 40vh;
+    width: 55vw;
 }
 
 .picture img {
-    position: absolute;
-    height: 0;
-    width: 0;
-    visibility: hidden;
+    position: relative;
+    margin: auto;
+    margin-bottom: 5vh;
+    display: block;
+    width: 55vw;
+    height: 40vh;
+}
+
+.info {
+    border-top: solid 1px black;
+    position: relative;
+    margin: auto;
+    display: block;
+    font-size: 2vh;
+    text-align: center;
+    width: 80%;
 }
 
 .cards {
@@ -232,7 +237,7 @@ h1 {
     text-align: center;
     font-size: 1vh;
     width: 100%;
-    height: 10vh;
+    height: 5vh;
 }
 }
 /* Landscape */
@@ -409,7 +414,7 @@ h1 {
 .info {
     position: absolute;
     float: left;
-    font-size: 1.4vw;
+    font-size: 2.4vh;
     left: 15vw;
     width: 30vw;
 }
@@ -419,7 +424,7 @@ h1 {
     float: right;
     right: 15vw;
     width: 30vw;
-    height: 70vh;
+    height: 65vh;
 }
 
 .cards {
