--- a/templates/trades/about.html
+++ b/templates/trades/about.html
@@ -5,12 +5,17 @@
 
 {% block body_block %}
 
-<h1> What we do </h1>
 </br>
 
-<div class = "picture">
+<div class = "portrait_picture">
     <img  src="{% static 'images/MDM-office.jpg' %}" alt="MDM offices, Hillington"/>
 </div>
+
+<div class = "landscape_picture">
+    <img  src="{% static 'images/landscape-office.jpg' %}" alt="MDM offices, Hillington"/>
+</div>
+
+<h1> What we do </h1>
 
 <div class="info">
     MDM Cover several trades including: </br>
