--- a/static/trades/style.css
+++ b/static/trades/style.css
@@ -4,13 +4,22 @@
 @media screen and (orientation:portrait) {
    /* nav bar */
 .container {
-    width: 90%;
+    position: relative;
     margin: 0 auto;
+    width: 90%;
+    z-index: 0;
+    height: 100%;
 }
 
 
 header {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 1;
     background-color: white;
+    margin-bottom: 5vh;
 }
 
 
@@ -31,7 +40,7 @@ nav {
     position: relative;
     float: left;
     margin-left: 5vw;
-    height: 7vw;
+    height: 3.5vh;
     width: 25vw;
 }
 
@@ -39,7 +48,7 @@ nav {
 nav ul {
     list-style-type: none;
     margin: 0;
-    margin-left: 15vw;
+    margin-left: 25vw;
     padding: 0;
 }
 
@@ -47,7 +56,7 @@ nav ul {
 nav li {
     display: inline-block;
     margin-left: 4vw;
-    padding-top: 3vw;
+    padding-top: 1.75vh;
     position: relative;
     font-size: 1vh;
 }
@@ -98,13 +107,13 @@ html, body {
 
 .mySlides {
     display: none;
-    height: 20vh;
+    height: 25vh;
     border: solid 1px black;
 }
 
 .mySlides img {
     width: 100%;
-    height: 20vh;
+    height: 25vh;
 }
 
 .caption {
@@ -172,13 +181,19 @@ h1 {
     width: 55vw;
 }
 
-.picture img {
+.portrait_picture img {
+    display: none;
+    width: 0vw;
+    height: 0vh;
+}
+
+.landscape_picture img {
     position: relative;
     margin: auto;
     margin-bottom: 5vh;
     display: block;
-    width: 55vw;
-    height: 40vh;
+    width: 80vw;
+    height: 25vh;
 }
 
 .info {
@@ -240,17 +255,35 @@ h1 {
     height: 5vh;
 }
 }
+
+
+
+
+
+
+
+
+
+
 /* Landscape */
 @media screen and (orientation:landscape) {
 
 /* nav bar */
 .container {
-    width: 80%;
+    position: relative;
     margin: 0 auto;
+    width: 80%;
+    z-index: 0;
+    height: 100%;
 }
 
 
 header {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 1;
     background-color: white;
 }
 
@@ -280,6 +313,7 @@ nav {
 nav ul {
     list-style-type: none;
     margin: 0;
+    margin-left: 19vw;
     padding: 0;
 }
 
@@ -289,7 +323,7 @@ nav li {
     margin-left: 5.25vw;
     padding-top: 4vh;
     position: relative;
-    font-size: 1.5vw;
+    font-size: 0.75pc;
 }
 
 
@@ -419,12 +453,19 @@ h1 {
     width: 30vw;
 }
 
-.picture img {
+.portrait_picture img {
     position: absolute;
+    top: 20vh;
     float: right;
     right: 15vw;
     width: 30vw;
     height: 65vh;
+}
+
+.landscape_picture img {
+    display: none;
+    height: 0vh;
+    width: 0vw;
 }
 
 .cards {
